# user-management-demo

./: LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  tygo.yaml
backend-nestjs/: .dockerignore  .gitignore  Dockerfile  README.md  bunfig.toml  drizzle.config.ts  package.json  tsconfig.json
backend-nestjs/src/: app.controller.ts  app.module.ts  main.ts
backend-nestjs/src/common/pipes/: zod-validation.pipe.ts
backend-nestjs/src/database/: database.module.ts  drizzle.provider.ts  schema.ts
backend-nestjs/src/database/migrations/: 0000_worried_santa_claus.sql
backend-nestjs/src/database/migrations/meta/: 0000_snapshot.json  _journal.json
backend-nestjs/src/health/: health.controller.spec.ts  health.controller.ts
backend-nestjs/src/users/: users.controller.spec.ts  users.controller.ts  users.service.spec.ts  users.service.ts
backend-nestjs/src/users/dto/: create-user.dto.ts  update-user.dto.ts  user.dto.ts
backend-nestjs/src/users/schemas/: user.schema.spec.ts  user.schema.ts
backend-nestjs/test/: app.e2e.spec.ts  setup.ts
backend-rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
backend-rust/sql/: schema.sql
backend-rust/src/: config.rs  database.rs  error.rs  logging.rs  main.rs
backend-rust/src/api/: health.rs  mod.rs  users.rs
backend-rust/src/domain/: mod.rs
backend-rust/src/domain/models/: health.rs  mod.rs  models.rs  users.rs
backend-rust/src/repository/: user_repository.rs
backend-rust/src/service/: user_service.rs
backend/cmd/cli/: main.go
backend/cmd/cli/commands/db/: common.go  db.go  migrations.go  no_migrations.go
backend/cmd/cli/commands/user/: user.go
backend/cmd/rest/: main.go
backend/docs/swagger/: docs.go  swagger.json  swagger.yaml
backend/e2e/: docker-compose.yml  e2e_test.go  seed.sql
backend/internal/api/: api_suite_test.go  swagger.go  user_handler.go
backend/internal/config/: config.go
backend/internal/database/: daatabase.go
backend/internal/handlers/: handlers_suite_test.go  healthcheck.go  swagger.go  user_handler.go
backend/internal/migrations/: migrations.go
backend/internal/models/: user.go  user_status.go  user_test.go
backend/internal/repository/: user_repository.go
backend/internal/server/: register.go  server.go
backend/internal/service/: user_service.go
backend/internal/services/: healthcheck.go  users.go
backend/internal/validator/: validator.go  validator_test.go
frontend/: .stylelintrc.json  Dockerfile  README.md  angular.json  eslint.config.js  eslint.config.mjs  karma.conf.cjs  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.spec.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/user-form/: user-form.component.html  user-form.component.scss  user-form.component.spec.ts  user-form.component.ts
frontend/src/app/components/user-list/: user-list.component.html  user-list.component.scss  user-list.component.spec.ts  user-list.component.ts
frontend/src/app/models/: schema.json  user.model.ts
frontend/src/app/services/: user.service.spec.ts  user.service.ts
frontend/src/environments/: environment.production.ts  environment.ts
