[package]
name = "user-management-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "userapi"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"   # Use "z" for size or "s" for speed+size tradeoff
strip = "symbols"

[dependencies]
# Web & Async
actix-web = "4.10.0"
# Use the latest compatible version
actix-cors = "0.7.0"
tokio = { version = "1.44.0", features = ["full"] }

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls", # Or native-tls based on system setup
    "postgres",
    "macros",
    "time",
    "uuid",
] }

# Serialization / Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Configuration
config = { version = "0.15.11", features = [
    "toml",
] } # Removed yaml if only using toml
dotenvy = "0.15.7"
clap = { version = "4.5.35", features = ["derive", "env"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "json",
    "time",
] }
tracing-actix-web = "0.7.18"

# Error Handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities
time = { version = "0.3.41", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] } # Added formatting/parsing
url = "2.5.4" # For DSN parsing/masking
num_cpus = "1.16.0" # For default worker count


[dev-dependencies]
# Testing
reqwest = { version = "0.12.5", features = ["json"] }
tempfile = "3.19.1"
tracing-appender = "0.2.3"
tracing-test = "0.2.5"
